K8s/1.5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foo.bar.ru
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: multitool-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-nginx
                port:
                  number: 80
    # - host: foo.bar.com
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: "/"
    #         backend:
    #           service:
    #             name: myapp-nginx
    #             port:
    #               number: 80
